Added language detection and translation

--- a/QA_Engine.ipynb
+++ b/QA_Engine.ipynb
@@ -13,16 +13,19 @@
    "source": [
     "from transformers import pipeline\n",
     "import wikipedia as wiki\n",
-    "import torch"
+    "import torch\n",
+    "from googletrans import Translator\n",
+    "import googletrans\n",
+    "from langdetect import detect"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "# Setting the model for QA Engine\n",
-    "model_name = \"deepset/tinyroberta-squad2\""
+    "model_name = \"deepset/roberta-base-squad2\""
    ],
    "metadata": {
     "collapsed": false,
@@ -33,20 +36,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "device(type='cpu')"
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# Checking if the GPU is detected by PyTorch\n",
-    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "device = torch.device(0 if torch.cuda.is_available() else 'cpu')\n",
     "device"
    ],
    "metadata": {
@@ -58,96 +52,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "Downloading (…)lve/main/config.json:   0%|          | 0.00/835 [00:00<?, ?B/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "68c5dd731bfb402da1cf0f13916159ac"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Downloading pytorch_model.bin:   0%|          | 0.00/326M [00:00<?, ?B/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "1b4e62767390446aacc3bc407f06be70"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Downloading (…)okenizer_config.json:   0%|          | 0.00/383 [00:00<?, ?B/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "fec0b22f21fc472fae8c35bd90c84951"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Downloading (…)olve/main/vocab.json:   0%|          | 0.00/798k [00:00<?, ?B/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "2d9d450869ea4e4abb828819ace1d070"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Downloading (…)olve/main/merges.txt:   0%|          | 0.00/456k [00:00<?, ?B/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "ddc3c259a489449d81930a6abff1445f"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Downloading (…)/main/tokenizer.json:   0%|          | 0.00/1.36M [00:00<?, ?B/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "fd70c18c6793436fb7a0b80392e55ee4"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Downloading (…)cial_tokens_map.json:   0%|          | 0.00/239 [00:00<?, ?B/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "fb80b26d54744b0b98608130669dadbf"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# Setting NLP pipeline for QA Engine\n",
-    "nlp = pipeline('question-answering', model=model_name, tokenizer=model_name, device = device)"
+    "nlp = pipeline('question-answering', model=model_name, tokenizer=model_name, device = device)\n",
+    "nlp"
    ],
    "metadata": {
     "collapsed": false,
@@ -158,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "# Function to find relevant wikipedia content for given tag\n",
@@ -176,37 +86,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "# Function to run QA Engine on question text and tag\n",
     "def QA_run_inference(question_text, tag):\n",
-    "    page_content = find_wiki_content(tag)\n",
-    "    QA_input = {'question': question_text,'context': page_content}\n",
-    "    return nlp(QA_input)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "{'score': 0.3630419373512268, 'start': 23840, 'end': 23845, 'answer': 'Venus'}"
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "QA_run_inference(\"Which is the second planet to the sun?\", \"Solar System\")"
+    "    lang = detect(question_text)\n",
+    "    ts = Translator()\n",
+    "    translated_tag = ts.translate(tag)\n",
+    "    result = ts.translate(question_text)\n",
+    "    page_content = find_wiki_content(translated_tag.text)\n",
+    "    QA_input = {'question': result.text,'context': page_content}\n",
+    "    answer = nlp(QA_input)\n",
+    "    translated_answer = ts.translate(answer['answer'], dest=lang).text\n",
+    "    answer['translated_answer'] = translated_answer\n",
+    "    answer['original_language'] = googletrans.LANGUAGES[lang]\n",
+    "    return answer"
    ],
    "metadata": {
     "collapsed": false,
@@ -219,12 +114,99 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "QA_run_inference(\"Wer ist der aktuelle Präsident der USA?\", \"President USA\")"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "QA_run_inference(\"Quelle est la valeur de pi ?\", \"Pi\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "QA_run_inference(\"What is R?\", \"R Programming Language\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'score': 0.7530295252799988,\n 'start': 150,\n 'end': 157,\n 'answer': '3.14159',\n 'translated_answer': '3.14159',\n 'original_language': 'french'}"
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "QA_run_inference(\"Quelle est la valeur de pi ?\", \"Pi\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\anaconda3\\lib\\site-packages\\transformers\\pipelines\\base.py:1043: UserWarning: You seem to be using the pipelines sequentially on GPU. In order to maximize efficiency please use a dataset\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "{'score': 0.4661586582660675,\n 'start': 5,\n 'end': 66,\n 'answer': 'a programming language for statistical computing and graphics',\n 'translated_answer': 'a programming language for statistical computing and graphics',\n 'original_language': 'english'}"
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "QA_run_inference(\"What is R?\", \"R Programming Language\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
    }
   }
  ],
